Add semantic ui npm

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "reselect": "2.5.3",
     "sanitize-html": "^1.14.1",
     "scroll-to-element": "^2.0.0",
+    "semantic-ui-react": "^0.75.1",
     "serialize-error": "2.0.0",
     "shallowequal": "0.2.2",
     "swagger-client": "^3.3.1",
