--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "immutable": "^3.x.x",
     "js-yaml": "^3.5.5",
     "lodash": "4.17.2",
+    "marked": "^0.3.6",
     "matcher": "^0.1.2",
     "memoizee": "0.4.1",
     "promise-worker": "^1.1.1",
